--- a/public/room.html
+++ b/public/room.html
@@ -23,10 +23,44 @@
       <div class="room-info">
         <div class="logo">
           <span class="logo-icon">🎵</span>
-          <span class="logo-text">VibeRoom</span>
+          <span class="logo-t">VibeRoom</span>
         </div>
         <div class="room-details">
-          <h2 id="roomName">Loading room...</h2>
+          <h2 id="roomName" style="display: inline-block; margin-right: 8px;">Loading room...</h2>
+          <button
+            id="copyRoomBtn"
+            title="Copy Room ID"
+            style="
+              background: transparent;
+              border: none;
+              cursor: pointer;
+              font-size: 18px;
+              color: #555;
+              vertical-align: middle;
+              transition: color 0.3s ease;
+            "
+            aria-label="Copy Room ID"
+          >
+            📋
+          </button>
+          <span
+            id="copyConfirmation"
+            style="
+              display: inline-block;
+              margin-left: 8px;
+              background-color: #4caf50;
+              color: white;
+              padding: 2px 6px;
+              border-radius: 4px;
+              font-size: 12px;
+              opacity: 0;
+              pointer-events: none;
+              transition: opacity 0.3s ease;
+              vertical-align: middle;
+            "
+          >
+            Copied!
+          </span>
           <div class="room-status">
             <span id="onlineCount">0</span> people vibing
           </div>
@@ -331,11 +365,33 @@
       }, 5000);
     }
   });
-</script>
+
+  </script>
 
   <script src="/socket.io/socket.io.js"></script>
   <script src="https://www.youtube.com/iframe_api"></script>
   <script src="client.js"></script>
+
+  <script>
+    // Copy room ID button handler
+    document.addEventListener('DOMContentLoaded', () => {
+      const copyRoomBtn = document.getElementById('copyRoomBtn');
+      const copyConfirmation = document.getElementById('copyConfirmation');
+      const roomName = document.getElementById('roomName');
+
+      copyRoomBtn.addEventListener('click', () => {
+        if (!roomName.textContent || roomName.textContent === 'Loading room...') return;
+
+        navigator.clipboard.writeText(roomName.textContent).then(() => {
+          // Show confirmation message
+          copyConfirmation.style.opacity = '1';
+          setTimeout(() => {
+            copyConfirmation.style.opacity = '0';
+          }, 1500);
+        });
+      });
+    });
+  </script>
 </body>
 
 </html>
