join card update for mobiles

--- a/public/index.html
+++ b/public/index.html
@@ -156,7 +156,7 @@
             </p>
           </div>
           <div class="about-image">
-            <img src="img1.svg" alt="About VibeRoom" />
+            <img src="img2.png" alt="About VibeRoom" />
           </div>
         </div>
       </section>
