video player bug fixes

--- a/public/room.html
+++ b/public/room.html
@@ -5,6 +5,7 @@
   <title>VibeRoom - Share Music Together</title>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" href="icon.png" type="image/png" />
   <link rel="stylesheet" href="styles.css" />
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" />
@@ -22,7 +23,7 @@
     <header class="room-header">
       <div class="room-info">
         <div class="logo">
-          <span class="logo-icon">🎵</span>
+          <img src="icon.png" alt="VibeRoom Icon" class="rotating-icon" />
           <span class="logo-t">VibeRoom</span>
         </div>
         <div class="room-details">
