--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <title>VibeRoom - Share Music Together</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="icon.png" type="image/png" />
     <link rel="stylesheet" href="styles.css" />
     <link
       rel="stylesheet"
@@ -19,7 +20,7 @@
     <nav class="landing-nav">
       <div class="nav-container">
         <div class="logo">
-          <span class="logo-icon"><i class="fas fa-headphones-alt"></i></span>
+          <img src="icon.png" alt="VibeRoom Icon" class="rotating-icon" />
           <span class="logo-text">VibeRoom</span>
         </div>
         <div class="nav-links">
@@ -272,6 +273,7 @@
               <a href="#" aria-label="GitHub"><i class="fab fa-github"></i></a>
               <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
               <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+              <a href="#" aria-label="Dribbble"><i class="fab fa-dribbble"></i></a>
             </div>
           </div>
           <div class="team-member">
@@ -376,9 +378,9 @@
         <div class="footer-content">
           <div class="footer-logo">
             <div class="logo">
-              <span class="logo-icon"><i class="fas fa-headphones-alt"></i></span>
-              <span class="logo-text">VibeRoom</span>
-            </div>
+          <img src="icon.png" alt="VibeRoom Icon" class="rotating-icon" />
+          <span class="logo-text">VibeRoom</span>
+        </div>
             <p>Feel the music together</p>
           </div>
           <div class="footer-links">
@@ -416,7 +418,7 @@
         </div>
       </footer>
     </div>
-
+    
     <script>
       document
         .getElementById("joinForm")
@@ -530,5 +532,6 @@
         }
       });
     </script>
+
   </body>
 </html>
