--- a/public/room.html
+++ b/public/room.html
@@ -5,7 +5,7 @@
   <title>VibeRoom - Share Music Together</title>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="icon" href="icon.png" type="image/png" />
+  <link rel="icon" href="images/icon.png" type="image/png" />
   <link rel="stylesheet" href="styles.css" />
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" />
@@ -14,16 +14,11 @@
 
 <body>
   <div class="room-container">
-    <!-- Portrait view suggestion button for small screens
-    <button id="portraitViewBtn" class="portrait-view-button" title="Switch to Portrait View">
-      <i class="fas fa-mobile-alt"></i> Use Portrait View
-    </button> -->
-
     <!-- Header with room info -->
     <header class="room-header">
       <div class="room-info">
         <div class="logo">
-          <img src="icon.png" alt="VibeRoom Icon" class="rotating-icon" />
+          <img src="images/icon.png" alt="VibeRoom Icon" class="rotating-icon" />
           <span class="logo-t">VibeRoom</span>
         </div>
         <div class="room-details">
