--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     <div class="nav-container">
       <div class="logo">
         <img src="images/icon.png" alt="VibeRoom Icon" class="rotating-icon" />
-        <span class="logo-text">VibeRoom</span>
+        <a href="#" class="logo-text">VibeRoom</a>
       </div>
       <div class="nav-links">
         <a href="#about">About</a>
@@ -55,11 +55,11 @@
         </div>
         <div class="hero-stats">
           <div class="stat-item">
-            <span class="stat-number">1000+</span>
+            <span class="stat-number">100+</span>
             <span class="stat-label">Active Rooms</span>
           </div>
           <div class="stat-item">
-            <span class="stat-number">5000+</span>
+            <span class="stat-number">500+</span>
             <span class="stat-label">Happy Users</span>
           </div>
           <div class="stat-item">
@@ -69,7 +69,7 @@
         </div>
       </div>
       <div class="hero-image">
-        <img src="images/img1.svg?height=400&width=600" alt="People enjoying music together" />
+        <img src="images/home.svg" alt="People enjoying music together" />
       </div>
     </section>
 
@@ -132,7 +132,9 @@
       <div class="about-content">
         <div class="about-text">
           <p>
-            VibeRoom was born from a simple idea: music is better when shared.
+            VibeRoom was born from a simple idea:
+            <br>
+            Music is better when shared.
             We wanted to create a space where friends could listen to music
             together, even when physically apart.
           </p>
@@ -149,7 +151,7 @@
           </p>
         </div>
         <div class="about-image">
-          <img src="images/img3.jpg" alt="About VibeRoom" />
+          <img src="images/about.jpg" alt="About VibeRoom" />
         </div>
       </div>
     </section>
@@ -280,36 +282,56 @@
       <div class="team-members">
         <div class="team-member">
           <div class="member-avatar">
-            <img src="images/yeshVibe.jpg" alt="Team Member" />
+            <img src="images/sripadVibe.jpg" alt="Team Member" />
           </div>
-          <h3>Yeshwanth</h3>
-          <p class="member-role">Founder & Lead Developer</p>
+          <h3>Sripad</h3>
+          <p class="member-role">Founder & Backend Developer</p>
           <p class="member-bio">
-            Music enthusiast and full-stack developer with a passion for
-            creating shared experiences.
+            “Architecting the vibe behind the scenes.”
           </p>
+
           <div class="member-social">
-            <a href="#" aria-label="GitHub"><i class="fab fa-github"></i></a>
-            <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
-            <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+            <a href="https://github.com/Sripad1003" target="_blank" title="GitHub">
+              <img src="images/github.png" alt="Portfolio" style="width: 24px; height: 24px;" />
+            </a>
+            <a href="https://www.linkedin.com/in/chilivery-sripad-326961286/" target="_blank" title="LinkedIn">
+              <img src="images/linkedin.png" alt="Portfolio" style="width: 24px; height: 24px;" />
+            </a>
+            <a href="https://leetcode.com/SripadChilivery" target="_blank" title="Portfolio">
+              <img src="images/portfolio.png" alt="Portfolio" style="width: 24px; height: 24px;" />
+            </a>
+            <a href="https://leetcode.com/SripadChilivery" target="_blank" title="LeetCode">
+              <img src="images/leetcode.png" alt="LeetCode" style="width: 24px; height: 24px;" />
+            </a>
+
+
           </div>
         </div>
         <div class="team-member">
           <div class="member-avatar">
-            <img src="images/sripadVibe.jpg" alt="Team Member" />
+            <img src="images/yeshVibe.jpg" alt="Team Member" />
           </div>
-          <h3>Sripad</h3>
-          <p class="member-role">Founder & Lead Developer</p>
+          <h3>Yeshwanth</h3>
+          <p class="member-role">Frontend Developer</p>
           <p class="member-bio">
-            Creating intuitive and beautiful interfaces that make music
-            sharing a joy.
+            “Designing the vibe you can see and feel.”
           </p>
           <div class="member-social">
-            <a href="#" aria-label="GitHub"><i class="fab fa-github"></i></a>
-            <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
-            <a href="#" aria-label="Dribbble"><i class="fab fa-dribbble"></i></a>
+            <a href="https://github.com/MantriYeshwanth" target="_blank" title="GitHub">
+              <img src="images/github.png" alt="Portfolio" style="width: 24px; height: 24px;" />
+            </a>
+            <a href="https://www.linkedin.com/in/mantri-yeshwanth-167623287/" target="_blank" title="LinkedIn">
+              <img src="images/linkedin.png" alt="Portfolio" style="width: 24px; height: 24px;" />
+            </a>
+            <a href="https://yeshwanthmantri.vercel.app/" target="_blank" title="Portfolio">
+              <img src="images/portfolio.png" alt="Portfolio" style="width: 24px; height: 24px;" />
+            </a>
+            <a href="https://leetcode.com/yeshwanthmantri" target="_blank" title="LeetCode">
+              <img src="images/leetcode.png" alt="LeetCode" style="width: 24px; height: 24px;" />
+            </a>
           </div>
         </div>
+
       </div>
     </section>
 
@@ -399,59 +421,66 @@
       </div>
     </section>
 
-      <!-- Footer -->
-      <footer>
-        <div class="footer-content">
-          <div class="footer-logo">
-            <div class="logo">
-          <img src="images/icon.png" alt="VibeRoom Icon" class="rotating-icon" />
-          <span class="logo-text">VibeRoom</span>
-        </div>
-            <p>Feel the music together</p>
+    <!-- Footer -->
+    <footer>
+      <div class="footer-content">
+        <div class="footer-logo">
+          <div class="logo">
+            <img src="images/icon.png" alt="VibeRoom Icon" class="rotating-icon" />
+            <span class="logo-text">VibeRoom</span>
           </div>
-          <div class="footer-links">
-            <div class="footer-column">
-              <h3>Navigation</h3>
-              <ul>
-                <li><a href="#about">About</a></li>
-                <li><a href="#features">Features</a></li>
-                <li><a href="#how-it-works">How It Works</a></li>
-                <li><a href="#team">Team</a></li>
-                <li><a href="#faq">FAQ</a></li>
-              </ul>
+          <p>Feel the music together</p>
+        </div>
+        <div class="footer-links">
+          <div class="footer-column">
+            <h3>Navigation</h3>
+            <ul>
+              <li><a href="#about">About</a></li>
+              <li><a href="#features">Features</a></li>
+              <li><a href="#how-it-works">How It Works</a></li>
+              <li><a href="#team">Team</a></li>
+              <li><a href="#faq">FAQ</a></li>
+            </ul>
+          </div>
+          <div class="footer-column">
+            <h3>Legal</h3>
+            <ul>
+              <li><a href="/terms.html" target="_blank">Terms of Service</a></li>
+              <li><a href="/privacy.html" target="_blank">Privacy Policy</a></li>
+              <li><a href="/cookies.html" target="_blank">Cookie Policy</a></li>
+            </ul>
+          </div>
+
+          <div class="footer-column">
+            <h3>Connect</h3>
+            <div class="social-links">
+              <a href="https://github.com/Sripad1003/viberoom" target="_blank" aria-label="GitHub">
+                <i class="fab fa-github"></i>
+              </a>
+              <a href="https://www.linkedin.com/in/chilivery-sripad-326961286/" target="_blank" aria-label="LinkedIn">
+                <i class="fab fa-linkedin"></i>
+              </a>
+              <a href="mailto:chiliverysripad8@gmail.com" aria-label="Email">
+                <i class="fas fa-envelope"></i>
+              </a>
             </div>
-            <div class="footer-column">
-              <h3>Legal</h3>
-              <ul>
-                <li><a href="#">Terms of Service</a></li>
-                <li><a href="#">Privacy Policy</a></li>
-                <li><a href="#">Cookie Policy</a></li>
-              </ul>
-            </div>
-            <div class="footer-column">
-              <h3>Connect</h3>
-              <div class="social-links">
-                <a href="#" aria-label="GitHub"><i class="fab fa-github"></i></a>
-                <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
-                <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-                <a href="#" aria-label="Discord"><i class="fab fa-discord"></i></a>
-              </div>
-            </div>
+
           </div>
         </div>
-        <div class="footer-bottom">
-          <p>VibeRoom &copy; 2024 - Feel the music together</p>
-        </div>
-      </footer>
-    </div>
-    
-    <script>
-      document
-        .getElementById("joinForm")
-        .addEventListener("submit", function (e) {
-          e.preventDefault();
-          const username = document.getElementById("username").value.trim();
-          const room = document.getElementById("room").value.trim();
+      </div>
+      <div class="footer-bottom">
+        <p>VibeRoom &copy; 2024 - Feel the music together</p>
+      </div>
+    </footer>
+  </div>
+
+  <script>
+    document
+      .getElementById("joinForm")
+      .addEventListener("submit", function (e) {
+        e.preventDefault();
+        const username = document.getElementById("username").value.trim();
+        const room = document.getElementById("room").value.trim();
 
         if (username && room) {
           window.location.href = `/room.html?username=${encodeURIComponent(
