updates in queue and player

--- a/public/index.html
+++ b/public/index.html
@@ -49,9 +49,6 @@
             <i class="fas fa-headphones-alt button-icon"></i>
             <span>Get Started</span>
           </button>
-          <a href="#how-it-works" class="secondary-button">
-            <span>Learn More</span>
-          </a>
         </div>
         <div class="hero-stats">
           <div class="stat-item">
@@ -113,7 +110,7 @@
         </div>
 
         <div class="create-room">
-          <button id="createRoomBtn" class="secondary-button full-width">
+          <button id="createRoomBtn" class="secondary-button2 full-width">
             <i class="fas fa-plus button-icon"></i>
             Create New Room
           </button>
@@ -414,7 +411,7 @@
           Join thousands of music lovers sharing their favorite tunes in
           real-time.
         </p>
-        <button id="scrollToJoin2" class="primary-button large">
+        <button id="scrollToJoin" class="primary-button large">
           <i class="fas fa-headphones-alt button-icon"></i>
           <span>Get Started Now</span>
         </button>
@@ -535,12 +532,6 @@
 
     // Scroll to join section
     document.getElementById("scrollToJoin").addEventListener("click", () => {
-      document
-        .getElementById("join-section")
-        .scrollIntoView({ behavior: "smooth" });
-    });
-
-    document.getElementById("scrollToJoin2").addEventListener("click", () => {
       document
         .getElementById("join-section")
         .scrollIntoView({ behavior: "smooth" });
